[package]
name = "watchmux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "3.2.15", features = ["derive"] }
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
